Fix UI issues in email improvements (#55562)
* Fix attribute names in dummy email preview product

* Translate dummy email preview product strings

* Fix email preview sender overflowing with long name or email

* Add changelog

* Prevent jumping to the top of the page when clicked on the circle in color picker

* Open color palette when clicking on the color preview

* Always use accent color for links in improved emails

* Optimize new email design for mobiles

--- a/plugins/woocommerce/client/admin/client/settings-email/style.scss
+++ b/plugins/woocommerce/client/admin/client/settings-email/style.scss
@@ -233,11 +233,11 @@ $wc-setting-email-width: 634px;
 .wc-settings-email-preview-header-sender {
 	font-size: 13px;
 	font-weight: 600;
+	word-break: break-word;
 
 	span {
 		font-size: 11px;
 		font-weight: 400;
-		margin-left: 4px;
 	}
 }
 
